--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -134,6 +134,11 @@
                         <Color red="0.7372549176216125" green="0.929411768913269" blue="0.6705882549285889" />
                      </color>
                   </Stop>
+                  <Stop offset="0.010067114093959731">
+                     <color>
+                        <Color red="0.7372549176216125" green="0.929411768913269" blue="0.6705882549285889" />
+                     </color>
+                  </Stop>
                   <Stop offset="1.0">
                      <color>
                         <Color red="0.45490196347236633" green="0.7686274647712708" blue="0.7215686440467834" />
@@ -143,9 +148,18 @@
             </LinearGradient>
          </fill></Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="226.0" layoutX="410.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" width="183.0" />
-      <Label fx:id="plantLeveltwo" layoutX="280.0" layoutY="91.0" />
-      <Label fx:id="plantLevelThree" layoutX="490.0" layoutY="96.0" />
-      <Label fx:id="levelPlantOne" layoutX="70.0" layoutY="93.0" />
+      <Label fx:id="plantLeveltwo" layoutX="292.0" layoutY="94.0" prefHeight="17.0" prefWidth="12.0">
+         <font>
+            <Font name="Arial Black" size="15.0" />
+         </font></Label>
+      <Label fx:id="plantLevelThree" layoutX="490.0" layoutY="96.0" prefHeight="17.0" prefWidth="12.0">
+         <font>
+            <Font name="Arial Black" size="15.0" />
+         </font></Label>
+      <Label fx:id="levelPlantOne" layoutX="96.0" layoutY="94.0" prefHeight="17.0" prefWidth="12.0">
+         <font>
+            <Font name="Arial Black" size="15.0" />
+         </font></Label>
       <ImageView fx:id="imagePlantOne" fitHeight="155.0" fitWidth="171.0" layoutX="17.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ImageView fx:id="imagePlantTwo" fitHeight="155.0" fitWidth="170.0" layoutX="217.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ProgressBar fx:id="plantWaterBarOne" layoutX="14.0" layoutY="246.0" prefHeight="17.0" prefWidth="171.0" progress="0.78" visible="false" />
