--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -148,17 +148,17 @@
             </LinearGradient>
          </fill></Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="226.0" layoutX="410.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" width="183.0" />
-      <Label fx:id="plantLeveltwo" layoutX="292.0" layoutY="94.0" prefHeight="17.0" prefWidth="12.0">
+      <Label fx:id="plantLeveltwo" alignment="CENTER" layoutX="292.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font></Label>
+      <Label fx:id="plantLevelThree" alignment="CENTER" layoutX="490.0" layoutY="96.0" prefHeight="17.0" prefWidth="17.0">
          <font>
             <Font name="Arial Black" size="15.0" />
          </font></Label>
-      <Label fx:id="plantLevelThree" layoutX="490.0" layoutY="96.0" prefHeight="17.0" prefWidth="12.0">
+      <Label fx:id="levelPlantOne" alignment="CENTER" layoutX="91.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
          <font>
-            <Font name="Arial Black" size="15.0" />
-         </font></Label>
-      <Label fx:id="levelPlantOne" layoutX="96.0" layoutY="94.0" prefHeight="17.0" prefWidth="12.0">
-         <font>
-            <Font name="Arial Black" size="15.0" />
+            <Font name="Arial Black" size="12.0" />
          </font></Label>
       <ImageView fx:id="imagePlantOne" fitHeight="155.0" fitWidth="171.0" layoutX="17.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ImageView fx:id="imagePlantTwo" fitHeight="155.0" fitWidth="170.0" layoutX="217.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" visible="false" />
