--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -152,10 +152,6 @@
          <font>
             <Font name="Arial Black" size="12.0" />
          </font></Label>
-      <Label fx:id="plantLevelThree" alignment="CENTER" layoutX="490.0" layoutY="96.0" prefHeight="17.0" prefWidth="17.0">
-         <font>
-            <Font name="Arial Black" size="15.0" />
-         </font></Label>
       <Label fx:id="levelPlantOne" alignment="CENTER" layoutX="91.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
          <font>
             <Font name="Arial Black" size="12.0" />
@@ -337,6 +333,7 @@
          </ripplerFill>
       </JFXButton>
       <ImageView fx:id="imagePlantThree" fitHeight="155.0" fitWidth="170.0" layoutX="417.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="plantLevelThree" layoutX="490.0" layoutY="94.0" />
 
    </children>
    <effect>
